# constrained-sft

./: .gitignore  README.md  alpacaeval_by_tag.sh  environment.yml  eval.py  evaluation_results.csv  pda_conda.yaml  pda_full.yaml  pda_pip.txt  pyproject.toml  test_eval.py  wandb_download.py
configs/: ds_zero3.json  ds_zero3_debug.json
configs/cluster/: reranker.yaml
configs/debug/: bias.yaml  reasoning.yaml  reranker.yaml  safe.yaml  simple.yaml
configs/eval/: default.yaml  reranker.yaml  wandb_alpaca_eval.yaml  wandb_alpaca_eval_vllm.yaml  wandb_ifeval_vllm.yaml  wandb_when2call_lm_eval_vllm.yaml
configs/train/: bias.yaml  bias2.yaml  bias_conv.yaml  default.yaml  reasoning.yaml  reranker.yaml  reranker_1.yaml  reranker_slurm.yaml  safe.yaml  simple.yaml
configs/train/bias/: aug_dual.yaml  aug_dual_2.yaml  avg.yaml  baseline.yaml  dual.yaml  l2.yaml  penalty.yaml  resilient.yaml
configs/train/dpo_kl/: aug_dual.yaml  aug_dual_4.yaml  avg.yaml  penalty.yaml  resilient.yaml  simpo.yaml  when2call_apigen_xlam.yaml  when2call_apigen_xlam_10.yaml  when2call_apigen_xlam_20.yaml  when2call_apigen_xlam_20_2.yaml  when2call_apigen_xlam_less.yaml  when2call_aug_dual.yaml  when2call_avg.yaml  when2call_avg_no_pre_20_2_longer.yaml  when2call_both.yaml  when2call_both_dual.yaml  when2call_both_longer.yaml  when2call_both_no_pre.yaml  when2call_both_no_pre_20_1.yaml  when2call_both_no_pre_20_2_ep_10_lr01.yaml  when2call_both_no_pre_20_2_ep_20.yaml  when2call_both_no_pre_20_2_longer.yaml  when2call_both_no_pre_30_05.yaml  when2call_both_no_pre_30_2.yaml  when2call_both_no_pre_5_2.yaml  when2call_both_resilience_01.yaml  when2call_both_resilience_05.yaml  when2call_both_resilience_1.5.yaml  when2call_both_resilience_1.yaml  when2call_both_resilience_100.yaml  when2call_both_resilience_10_01.yaml  when2call_both_resilience_1_100.yaml  when2call_both_resilience_2.yaml  when2call_both_resilience_4.yaml  when2call_caldpo.yaml  when2call_cpo.yaml  when2call_dpo.yaml  when2call_dual.yaml  when2call_eval.yaml  when2call_margin.yaml  (+21 more)
docs/: tooling_paper_aligned.md  tooling_review_for_deletion.md
hf_ready/ihounie__llama2-7b-alpaca-1k/: merge_and_save.py
notebooks/: CDF_reranker.ipynb  Safety_CDFs.ipynb  Table_2_safety_prefs.ipynb  when2call_metrics_barplots.ipynb
scripts/: README.md  compute_kl_safe_dpo.py  compute_refusal_metrics.py  compute_slack_cvar.py  eval_saferlhf_beaver.py  export_wandb_lora_to_hf.py  make_safe_alpaca_4.py  prepare_alpaca_1k_longest_hf.py  run_pref.sh  run_safe_long1k_eval.py  run_safe_long1k_eval.sh  train_sft_ultrachat_1b.py
scripts/aux_training/: length_training.py
scripts/datasets/: make_safe_alpaca_4.py
scripts/paper_eval/: alpacaeval_by_tag.sh  compute_kl_safe_dpo.py  compute_refusal_metrics.py  compute_slack_cvar.py  eval_reranker_checkpoints.py  eval_saferlhf_beaver.py  run_safe_long1k_eval.py  run_safe_long1k_eval.sh
scripts/release/: export_wandb_lora_to_hf.py
scripts/when2call/: run_pref.sh
src/: eval.py  train.py  utils.py
src/callbacks/: cache.py  eval_every_n_epochs.py  log_slack.py  profiler_callback.py  trainer_eval.py
src/eval/: __init__.py  wandb_alpaca_eval.py  wandb_alpaca_eval_vllm.py  wandb_bfcl_v2_vllm.py  wandb_ifeval_vllm.py  wandb_when2call_lm_eval_vllm.py  when2call_additional_metrics.py
src/experiments/: README_dpo_kl_losses.md  base.py  bias.py  dpo_kl.py  reasoning.py  registry.py  reranker.py  safety.py  utils.py
src/scripts/: augment_safety_dataset.py
(+194 files in other folders)
